[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/scripts/particle_button.gd" type="Script" id=1]
[ext_resource path="res://assets/images/confetti.png" type="Texture" id=2]
[ext_resource path="res://src/scenes/particles_scene.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/confetti-cone.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.117647, 0.133333, 0.207843, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color( 0.192157, 0.172549, 0.172549, 0.6 )

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="DynamicFont" id=2]
size = 12
use_filter = true
font_data = ExtResource( 5 )

[node name="Button" type="Button"]
anchor_left = 0.056
anchor_top = 0.325
anchor_right = 0.177
anchor_bottom = 0.377
margin_left = -0.344002
margin_right = -0.248001
margin_bottom = -0.199997
rect_min_size = Vector2( 124, 31 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
script = ExtResource( 1 )
button_particles = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 4.0
alignment = 1

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 20.0
margin_right = 50.0
margin_bottom = 31.0
rect_min_size = Vector2( 30, 0 )
mouse_filter = 2

[node name="ConfettiCone" type="TextureRect" parent="HBoxContainer/Control"]
material = SubResource( 3 )
anchor_left = 0.2
anchor_top = 0.29
anchor_right = 0.6
anchor_bottom = 0.935
margin_top = 0.00999928
margin_bottom = 0.0149975
mouse_filter = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="ConfettiParticles" type="TextureRect" parent="HBoxContainer/Control"]
anchor_left = 0.433
anchor_top = 0.194
anchor_right = 0.833
anchor_bottom = 0.581
margin_left = 0.00999928
margin_top = -0.0139847
margin_right = 0.00999832
margin_bottom = -0.0109863
mouse_filter = 2
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="HBoxContainer"]
material = SubResource( 4 )
margin_left = 54.0
margin_top = 8.0
margin_right = 108.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
text = "CONFIRM"

[connection signal="gui_input" from="." to="." method="_on_Button_gui_input"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
